2002-02-28  Jody Goldberg <jody@gnome.org>

	* cell-format.glade : reorder slightly.

2002-02-28  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* insert-cells.glade : add help button, change some ids
	* dialog-insert-cells.c : rewrite as guru

2002-02-28  Jody Goldberg <jody@gnome.org>

	* dialog-cell-format.c (draw_format_preview) : split the format
	  generation out into.
	(generate_format) : here.
	(cb_format_entry_changed) : don't regenerate the format.  This
          callback is called during the assignment of the format.  so we were
	  assigning things twice.  Simplify it while we're in here.
	(fmt_dialog_init_validation_page) : Use gnm_expr_entry_load_from_expr.
	(validation_entry_from_expr) : delete.
	(fmt_dialog_enable_widgets) : don't reorder things.  We only bother
	  storing the interesting widget, bu there are wrappers around some of
	  them which was breaking the reorder process.

2002-02-27  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-analysis-tools.c (error_in_entry) : gnumeric-expr-
	  entries are not gtkentries.
	(tool_destroy) : use g_object_unref
	(tool_load_selection) : gnumeric-expr-entries are not 
	  gtkentries.
	(dialog_random_tool_init) : load selection into gnumeric-
	  expr-entry rather than gtkentry
	
2002-02-27  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* autocorrect-glade : don't set has_focus for a widget on an
	  inactive notebook page
	
2002-02-27  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-goal-seek.c (focus_on_entry) : change argument type
	(cb_dialog_apply_clicked) : handle new expr entry widget, use
	  entry_to_float_with_format

2002-02-27  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-consolidate.c (is_cell_ref) replace with 
	  gnm_expr_entry_is_cell_ref
	(cb_add_clicked) : use gnm_expr_entry_global_range_name
	* dialog-solver.c (is_hom_row_or_col_ref) : use 
	  gnm_expr_entry_parse_as_value
	(is_cell_ref) replace with gnm_expr_entry_is_cell_ref