@@ -24,7 +24,18 @@
             <property name="visible">yes</property>
 
             <child>
-              <widget class="GtkButton" id="button1">
+              <widget class="GtkButton" id="helpbutton">
+                <property name="can_default">yes</property>
+                <property name="can_focus">yes</property>
+                <property name="visible">yes</property>
+                <property name="label">gtk-help</property>
+                <property name="use_stock">yes</property>
+                <property name="use_underline">yes</property>
+              </widget>
+            </child>
+
+            <child>
+              <widget class="GtkButton" id="okbutton">
                 <property name="can_default">yes</property>
                 <property name="has_default">yes</property>
                 <property name="can_focus">yes</property>
@@ -36,7 +47,7 @@
             </child>
 
             <child>
-              <widget class="GtkButton" id="button3">
+              <widget class="GtkButton" id="cancelbutton">
                 <property name="can_default">yes</property>
                 <property name="can_focus">yes</property>
                 <property name="visible">yes</property>
